tests/fixtures/negative/skf1-unsupported-version.hex
534b4631020100100000
0000000000000000000000000000000000000000000000000000000000000000
0000000000000000
